_sass/base/_spacing.scss
/* margin */
.m-0{
    margin: 0;
}
.mt-30{
    margin-top: 30px;
}
.mt-40{
    margin-top: 40px;
}
.mt-45{
    margin-top: 45px;
}
.mt-50{
    margin-top: 50px;
}
.mt-55{
    margin-top: 55px;
}
.mt-70{
    margin-top: 70px;
}
.mt-115{
    margin-top: 115px;
}
.mt-r-75{
    margin-top: -75px;
}
.mt-r-180{
    margin-top: -180px;
}
.mt-r-90{
    margin-top: -90px;
}
.mb-r-25{
    margin-bottom: -25px;
}
.mb-5{
    margin-bottom: 5px;
}
.mb-10{
    margin-bottom: 10px;
}
.mb-15{
    margin-bottom: 15px;
}
.mb-20{
    margin-bottom: 20px;
}
.mb-25{
    margin-bottom: 25px;
}
.mb-30{
    margin-bottom: 30px;
}
.mb-35{
    margin-bottom: 35px;
}
.mb-40{
    margin-bottom: 40px;
}
.mb-45{
    margin-bottom: 45px;
}
.mb-50{
    margin-bottom: 50px;
}
.mb-60{
    margin-bottom: 60px;
}
.mb-90{
    margin-bottom: 90px;
}


.mr-0{
    margin-right: 0;
}
.mr-5{
    margin-right: 5px;
}
.mr-10{
    margin-right: 10px;
}
.mr-15{
    margin-right: 15px;
}
.mr-20{
    margin-right: 20px;
}
.mr-25{
    margin-right: 25px;
}
.mr-30{
    margin-right: 30px;
}
.mr-35{
    margin-right: 35px;
}
.mr-40{
    margin-right: 40px;
}




.m-auto{
    margin: auto;
}
.mx-15{
    margin-left: 15px;
    margin-right: 15px;
}
.mx-auto{
    margin-left: auto;
    margin-right: auto;
}

/* padding */
.pt-30{
    padding-top: 30px;
}
.pt-35{
    padding-top: 35px;
}
.pt-40{
    padding-top: 40px;
}
.pt-55{
    padding-top: 55px;
}
.pt-60{
    padding-top: 60px;
}
.pt-70{
    padding-top: 70px;
}
.pt-140{
    padding-top: 140px;
}
.pb-20{
    padding-bottom: 20px;
}
.pb-40{
    padding-bottom: 40px;
}
.pb-50{
    padding-bottom: 50px;
}
.pb-60{
    padding-bottom: 60px;
}
.pb-70{
    padding-bottom: 70px;
}
.pb-80{
    padding-bottom: 80px;
}
.pb-445{
    padding-bottom: 445px;
}
.pb-500{
    padding-bottom: 500px;
}
.px-25{
    padding-left: 25px;
    padding-right: 25px;
}
.px-50{
    padding-left: 50px;
    padding-right: 50px;
}
.px-65{
    padding-left: 65px;
    padding-right: 65px;
}

.py-16{
    padding-top: 16px;
    padding-bottom: 16px;
}
.py-70{
    padding-top: 70px;
    padding-bottom: 70px;
}
@media(max-width: 579px){
    .mt-xs-r-5{
        margin-top: -5px;
    }
    .mt-xs-20{
        margin-top: 20px;
    }
    .mt-xs-30{
        margin-top: 30px;
    }
    .mt-xs-40{
        margin-top: 40px;
    }
    .mt-xs-60{
        margin-top: 60px;
    }
    .mb-xs-0{
        margin-bottom: 0;
    }
    .mb-xs-10{
        margin-bottom: 10px;
    }
    .mb-xs-15{
        margin-bottom: 15px;
    }
    .mb-xs-20{
        margin-bottom: 20px;
    }
    .mb-xs-30{
        margin-bottom: 30px;
    }
    .mb-xs-40{
        margin-bottom: 40px;
    }
    .mb-xs-50{
        margin-bottom: 50px;
    }
    .pt-xs-0{
        padding-top: 0;
    }
    .pt-xs-30{
        padding-top: 30px;
    }
    .pt-xs-35{
        padding-top: 35px;
    }
    .pt-xs-45{
        padding-top: 45px;
    }
    .pt-xs-90{
        padding-top: 90px;
    }
    .pb-xs-0{
        padding-bottom: 0;
    }
    .pb-xs-20{
        padding-bottom: 20px;
    }
    .pb-xs-30{
        padding-bottom: 30px;
    }
    .pb-xs-35{
        padding-bottom: 35px;
    }
    .pb-xs-55{
        padding-bottom: 55px;
    }
    .px-xs-15{
        padding-left: 15px;
        padding-right: 15px;
    }
    .px-xs-40{
        padding-left: 40px;
        padding-right: 40px;
    }
}


@media (max-width: 767px){
    .mt-sm-r-5{
        margin-top: -5px;
    }
    .mt-sm-20{
        margin-top: 20px;
    }
    .mt-sm-30{
        margin-top: 30px;
    }
    .mt-sm-40{
        margin-top: 40px;
    }
    .mt-sm-60{
        margin-top: 60px;
    }
    .mb-sm-0{
        margin-bottom: 0;
    }
    .mb-sm-10{
        margin-bottom: 10px;
    }
    .mb-sm-15{
        margin-bottom: 15px;
    }
    .mb-sm-20{
        margin-bottom: 20px;
    }
    .mb-sm-30{
        margin-bottom: 30px;
    }
    .mb-sm-40{
        margin-bottom: 40px;
    }
    .mb-sm-50{
        margin-bottom: 50px;
    }
    .pt-sm-0{
        padding-top: 0;
    }
    .pt-sm-30{
        padding-top: 30px;
    }
    .pt-sm-35{
        padding-top: 35px;
    }
    .pt-sm-45{
        padding-top: 45px;
    }
    .pt-sm-90{
        padding-top: 90px;
    }
    .pb-sm-0{
        padding-bottom: 0;
    }
    .pb-sm-20{
        padding-bottom: 20px;
    }
    .pb-sm-30{
        padding-bottom: 30px;
    }
    .pb-sm-35{
        padding-bottom: 35px;
    }
    .pb-sm-55{
        padding-bottom: 55px;
    }
    .px-sm-15{
        padding-left: 15px;
        padding-right: 15px;
    }
    .px-sm-40{
        padding-left: 40px;
        padding-right: 40px;
    }
}

@media (max-width: 1023px) {
    .mt-md-r-5{
        margin-top: -5px;
    }
    .mt-md-20{
        margin-top: 20px;
    }
    .mt-md-30{
        margin-top: 30px;
    }
    .mt-md-40{
        margin-top: 40px;
    }
    .mt-md-60{
        margin-top: 60px;
    }
    .mb-md-0{
        margin-bottom: 0;
    }
    .mb-md-10{
        margin-bottom: 10px;
    }
    .mb-md-15{
        margin-bottom: 15px;
    }
    .mb-md-20{
        margin-bottom: 20px;
    }
    .mb-md-30{
        margin-bottom: 30px;
    }
    .mb-md-40{
        margin-bottom: 40px;
    }
    .mb-md-50{
        margin-bottom: 50px;
    }
    .pt-md-0{
        padding-top: 0;
    }
    .pt-md-30{
        padding-top: 30px;
    }
    .pt-md-35{
        padding-top: 35px;
    }
    .pt-md-45{
        padding-top: 45px;
    }
    .pt-md-90{
        padding-top: 90px;
    }
    .pb-md-0{
        padding-bottom: 0;
    }
    .pb-md-20{
        padding-bottom: 20px;
    }
    .pb-md-30{
        padding-bottom: 30px;
    }
    .pb-md-35{
        padding-bottom: 35px;
    }
    .pb-md-55{
        padding-bottom: 55px;
    }
    .px-md-15{
        padding-left: 15px;
        padding-right: 15px;
    }
    .px-md-40{
        padding-left: 40px;
        padding-right: 40px;
    }
}
@media (max-width: 1140px) {

    .mt-lg-r-90{
        margin-top: -90px;
    }
    .mt-lg-r-5{
        margin-top: -5px;
    }
    .mt-lg-20{
        margin-top: 20px;
    }
    .mt-lg-30{
        margin-top: 30px;
    }
    .mt-lg-40{
        margin-top: 40px;
    }
    .mt-lg-60{
        margin-top: 60px;
    }
    .mb-lg-0{
        margin-bottom: 0;
    }
    .mb-lg-10{
        margin-bottom: 10px;
    }
    .mb-lg-15{
        margin-bottom: 15px;
    }
    .mb-lg-20{
        margin-bottom: 20px;
    }
    .mb-lg-30{
        margin-bottom: 30px;
    }
    .mb-lg-40{
        margin-bottom: 40px;
    }
    .mb-lg-50{
        margin-bottom: 50px;
    }
    .pt-lg-0{
        padding-top: 0;
    }
    .pt-lg-30{
        padding-top: 30px;
    }
    .pt-lg-35{
        padding-top: 35px;
    }
    .pt-lg-45{
        padding-top: 45px;
    }
    .pt-lg-90{
        padding-top: 90px;
    }
    .pb-lg-0{
        padding-bottom: 0;
    }
    .pb-lg-20{
        padding-bottom: 20px;
    }
    .pb-lg-30{
        padding-bottom: 30px;
    }
    .pb-lg-35{
        padding-bottom: 35px;
    }
    .pb-lg-55{
        padding-bottom: 55px;
    }
    .px-lg-15{
        padding-left: 15px;
        padding-right: 15px;
    }
    .px-lg-40{
        padding-left: 40px;
        padding-right: 40px;
    }
}

@media (min-width: 1141px) {
    .mt-xl-r-120{
        margin-top: -120px;
    }
    .mt-xl-r-90{
        margin-top: -90px;
    }
    .mt-xl-r-5{
        margin-top: -5px;
    }
    .mt-xl-20{
        margin-top: 20px;
    }
    .mt-xl-30{
        margin-top: 30px;
    }
    .mt-xl-40{
        margin-top: 40px;
    }
    .mt-xl-60{
        margin-top: 60px;
    }
    .mb-xl-0{
        margin-bottom: 0;
    }
    .mb-xl-10{
        margin-bottom: 10px;
    }
    .mb-xl-15{
        margin-bottom: 15px;
    }
    .mb-xl-20{
        margin-bottom: 20px;
    }
    .mb-xl-30{
        margin-bottom: 30px;
    }
    .mb-xl-40{
        margin-bottom: 40px;
    }
    .mb-xl-50{
        margin-bottom: 50px;
    }
    .pt-xl-0{
        padding-top: 0;
    }
    .pt-xl-30{
        padding-top: 30px;
    }
    .pt-xl-35{
        padding-top: 35px;
    }
    .pt-xl-45{
        padding-top: 45px;
    }
    .pt-xl-90{
        padding-top: 90px;
    }
    .pb-xl-0{
        padding-bottom: 0;
    }
    .pb-xl-20{
        padding-bottom: 20px;
    }
    .pb-xl-30{
        padding-bottom: 30px;
    }
    .pb-xl-35{
        padding-bottom: 35px;
    }
    .pb-xl-55{
        padding-bottom: 55px;
    }
    .px-xl-15{
        padding-left: 15px;
        padding-right: 15px;
    }
    .px-xl-40{
        padding-left: 40px;
        padding-right: 40px;
    }
}

